--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "ejs": "2.5.6",
     "express": "^4.15.2",
     "formidable": "^1.1.1",
-    "sendgrid": "^5.2.2",
-    "steganography": "^0.1.1"
+    "sendgrid": "^5.2.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
